--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="utf-8" />
         <title>Document</title>
+        <script
+            src="https://kit.fontawesome.com/9463564939.js"
+            crossorigin="anonymous"
+        ></script>
+        <link rel="stylesheet" href="/style/normalize.css" />
+        <link rel="stylesheet" href="/style/style.css" />
+        <script type="text/javascript" src="/script/script.js"></script>
     </head>
+
     <body>
-        asdf
+        <nav id="nav">
+            <button class="nav-button" onclick="changeNav()">
+                <i class="fas fa-bars"></i>
+            </button>
+            <a class="nav-item" href="/">Home</a>
+            <a class="nav-item" href="#">About Us</a>
+            <a class="nav-item" href="#">Contact</a>
+        </nav>
     </body>
 </html>
